# Komatta

./: .gitignore  Cargo.toml  README.md
benches/: benchmark.rs  crypt.rs
src/: actions.rs  config.rs  consts.rs  defaults.rs  keys.rs  lib.rs  main.rs  ops.rs  parameters.rs  target.rs
tests/: crypt.rs
