[package]
name = "Komatta"
description = "By the moment, a symmetric key block cypher 💿"
version = "0.0.1"
edition = "2021"

[dependencies]
rand = "0.8.5"
hex = "0.4.3"
argon2 = "0.4.1"
blake3 = "1.3.1"
clap = { version = "3.2.17", features = ["cargo"] }
colored = "2.0.0"

[dev-dependencies]
criterion = { version = "0.3", features = ["html_reports"] }

[[bench]]
name = "benchmark"
harness = false