[package]
name = "Komatta"
description = "A cryptosystem 💿"
version = "0.0.1"
edition = "2021"

[dependencies]
rand = "0.8.5"
hex = "0.4.3"
base64 = "0.13.0"
argon2 = "0.4.1"
blake3 = "1.3.1"
pqcrypto = "0.15.0"
serde = { version = "1.0.144", features = ["derive"] }
flexbuffers = "2.0.0"
clap = { version = "3.2.17", features = ["cargo"] }
colored = "2.0.0"

[dev-dependencies]
criterion = { version = "0.3", features = ["html_reports"] }

[[bench]]
name = "crypt"
harness = false