[package]
name = "Komatta"
description = "A cryptosystem 💿"
version = "0.0.1"
edition = "2021"

[dependencies]
rand = "0.8"
hex = "0.4"
base64 = "0"
const_format = "0.2"
argon2 = "0.5"
blake3 = "1.3"
pqcrypto = "0.16"
serde = { version = "1.0.144", features = ["derive"] }
flexbuffers = "2.0.0"
brotli = "3.3.4"
clap = { version = "4", features = ["cargo"] }
colored = "2"

[dev-dependencies]
criterion = { version = "0.4", features = ["html_reports"] }

[[bench]]
name = "crypt"
harness = false